[fix] invisible line between labels (#1487)

--- a/@navikt/core/css/stepper.css
+++ b/@navikt/core/css/stepper.css
@@ -95,5 +95,5 @@
   border-left: 2px solid var(--navds-semantic-color-border-muted);
   border-radius: var(--navds-border-radius-medium);
   pointer-events: none;
-  z-index: -1;
+  z-index: 1;
 }
